// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app KoaApp koa.use matches snapshot 1`] = `"[ { [Function: middleware] _name: 'helmet' } ]"`;

exports[`app KoaApp koa.use matches snapshot 2`] = `"[ [Function] ]"`;

exports[`app KoaApp koa.use matches snapshot 3`] = `"[ undefined ]"`;

exports[`app KoaApp koa.use matches snapshot 4`] = `"[ undefined ]"`;

exports[`app KoaApp listen logs 1`] = `
Array [
  Object {
    "level": "info",
    "message": "listen(12345)",
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":\\"listen(12345)\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`app KoaApp on error is registered and logs an error 1`] = `
Array [
  Object {
    "level": "info",
    "message": "listen(12345)",
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":\\"listen(12345)\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`app KoaApp on error is registered and logs an error 2`] = `
Array [
  [Error: can has error],
]
`;

exports[`app configureRouter 1`] = `
Array [
  "/healthcheck",
  [Function],
]
`;

exports[`app configureRouter 2`] = `
Array [
  "/player",
  [Function],
]
`;

exports[`app configureRouter 3`] = `
Array [
  "/sounds",
  [Function],
]
`;

exports[`app has expected exports 1`] = `
Array [
  "configureRouter",
  "KoaApp",
  "router",
  "logger",
]
`;
